fix: decouple "original file" enconding and "file to convert" encoding